Updated report file

--- a/Report/ChessGameReport.tex
+++ b/Report/ChessGameReport.tex
@@ -3,7 +3,7 @@
 \usepackage[english, vietnamese]{babel}
 \usepackage{authblk}
 \usepackage{setspace}
-\usepackage[margin=1.25in]{geometry}
+\usepackage[margin=1in, a4paper]{geometry}
 \usepackage{graphicx}
 \graphicspath{ {./figures/} }
 \usepackage{subcaption}
@@ -19,6 +19,12 @@
 \usepackage[style=nejm, 
 citestyle=numeric-comp,
 sorting=none]{biblatex}
+\usepackage{listings}
+\lstset{
+basicstyle=\small\ttfamily,
+columns=flexible,
+breaklines=true
+}
 % \addbibresource{sample.bib}
 
 %%%%%% Title %%%%%%
@@ -108,9 +114,9 @@ sorting=none]{biblatex}
                   \item Button to redo the latest undo and redo to the final board state.
                 \end{itemize}
         \end{itemize}
-    \item Load menu displays buttons to load saved games, each of which shows previews of board when hovered and load the actual game when clicked. 
-    \item Save menu displays buttons to save current game. On hover, each button display preview of saved game that is going to be overwritten if current game is saved. When pressed, a confirmation menu appears to ask if user want to overwrite. There are also a clear button for each save file to delete that save.
-    \item Setting menu has buttons of theme switching, adjust volume of all sound effect, mute and unmute sound, reset the game to starting position, and quit to menu.
+  \item Load menu displays buttons to load saved games, each of which shows previews of board when hovered and load the actual game when clicked.
+  \item Save menu displays buttons to save current game. On hover, each button display preview of saved game that is going to be overwritten if current game is saved. When pressed, a confirmation menu appears to ask if user want to overwrite. There are also a clear button for each save file to delete that save.
+  \item Setting menu has buttons of theme switching, adjust volume of all sound effect, mute and unmute sound, reset the game to starting position, and quit to menu.
 \end{itemize}
 \section{Chess board representation}
 \begin{itemize}
@@ -173,7 +179,7 @@ setoption name MultiPV value 1
 \end{itemize}
 After letting Stockfish executing commands, the communicator wait for 500 miliseconds before reading the result from \texttt{tmp/stockfish\_output.txt}
 \section{Game state management}
-The game is managed using the combination of 2D array board representation and FEN notation, the latter stores information needed to reconstruct the board from nothing. Turn management is done right after a legal move had been made. After each legal move, both array representation and FEN notation is updated. 
+The game is managed using the combination of 2D array board representation and FEN notation, the latter stores information needed to reconstruct the board from nothing. Turn management is done right after a legal move had been made. After each legal move, both array representation and FEN notation is updated.
 
 For undo and redo features, stack of FEN notation is used to store information for those operation, with the top of undo stack is the current board state. FEN notation of initial state is also saved as a constant string for creation of new game.
 
@@ -186,17 +192,44 @@ There are separate menu dedicated for loading. In that menu, available save file
 \section{Optional features}
 While being dragged, selected chess piece follows the mouse's cursor smoothly.
 \section{Technology stack}
-The game's logic, game state management and GUI(graphic user interface) is written in C and C++, using SDL2 and nanoSVG libraries for graphic. The AI used for player versus computer mode is \href{https://github.com/official-stockfish/Stockfish}{Stockfish}, a popular and strong open-source AI chess engine. Current board state is written to plain text file in FEN notation, followed by numbers indicating current game mode and difficulty of AI opponent. 
+The game's logic, game state management and GUI(graphic user interface) is written in C and C++, using SDL2 and nanoSVG libraries for graphic. The AI used for player versus computer mode is \href{https://github.com/official-stockfish/Stockfish}{Stockfish}, a popular and strong open-source AI chess engine. Current board state is written to plain text file in FEN notation, followed by numbers indicating current game mode and difficulty of AI opponent.
 \chapter{Design document}
 \section{System requirement and build}
 Currently, the game is only developed and tested on Windows operating system.
-To compile the program from source files, the directory must first be at the same path as the makefile file, that is, the \texttt{CS160\_Chess} folder
+To compile the program from source files, the directory must first be at the same path as the makefile file, that is, the \texttt{CS160\_Chess} folder. Also, makefile must be installed.
 
+Then, user can build the project by running \texttt{./buildscriptwindows.ps1} or run \texttt{make all}. After that, the executable is named \texttt{chess.exe}, which is located at \texttt{CS160\_Chess} folder. The executable will be automatically be ran after being built.
 
-\section{Interraction if single player mode}
+An alternative way for building the project if the above methods doesn't work:
+First, run \begin{lstlisting}
+Get-ChildItem -Path src -Filter *.o | Remove-Item -Force | Get-ChildItem -Path src -Filter chess.exe | Remove-Item -Force
+\end{lstlisting} in powershell.
+Then, execute the following commamds:
+\begin{lstlisting}
+g++ -c src/main.cpp -o src/main.o -std=c++20 -lmingw32  -lSDL2main -lSDL2 -lSDL2_ttf -lSDL2_image -lSDL2_mixer -Lsrc/SDL2/lib -Lsrc/SDL2/bin -Isrc/SDL2/include -Isrc/SDL2/include/SDL2
+g++ -c src/board.cpp -o src/board.o -std=c++20 -lmingw32  -lSDL2main -lSDL2 -lSDL2_ttf -lSDL2_image -lSDL2_mixer -Lsrc/SDL2/lib -Lsrc/SDL2/bin -Isrc/SDL2/include -Isrc/SDL2/include/SDL2
+g++ -c src/color.cpp -o src/color.o -std=c++20 -lmingw32  -lSDL2main -lSDL2 -lSDL2_ttf -lSDL2_image -lSDL2_mixer -Lsrc/SDL2/lib -Lsrc/SDL2/bin -Isrc/SDL2/include -Isrc/SDL2/include/SDL2
+g++ -c src/colorScheme.cpp -o src/colorScheme.o -std=c++20 -lmingw32  -lSDL2main -lSDL2 -lSDL2_ttf -lSDL2_image -lSDL2_mixer -Lsrc/SDL2/lib -Lsrc/SDL2/bin -Isrc/SDL2/include -Isrc/SDL2/include/SDL2
+g++ -c src/pieces.cpp -o src/pieces.o -std=c++20 -lmingw32  -lSDL2main -lSDL2 -lSDL2_ttf -lSDL2_image -lSDL2_mixer -Lsrc/SDL2/lib -Lsrc/SDL2/bin -Isrc/SDL2/include -Isrc/SDL2/include/SDL2
+g++ -c src/coordinate.cpp -o src/coordinate.o -std=c++20 -lmingw32  -lSDL2main -lSDL2 -lSDL2_ttf -lSDL2_image -lSDL2_mixer -Lsrc/SDL2/lib -Lsrc/SDL2/bin -Isrc/SDL2/include -Isrc/SDL2/include/SDL2
+g++ -c src/button.cpp -o src/button.o -std=c++20 -lmingw32  -lSDL2main -lSDL2 -lSDL2_ttf -lSDL2_image -lSDL2_mixer -Lsrc/SDL2/lib -Lsrc/SDL2/bin -Isrc/SDL2/include -Isrc/SDL2/include/SDL2
+g++ -c src/communicator.cpp -o src/communicator.o -std=c++20 -lmingw32  -lSDL2main -lSDL2 -lSDL2_ttf -lSDL2_image -lSDL2_mixer -Lsrc/SDL2/lib -Lsrc/SDL2/bin -Isrc/SDL2/include -Isrc/SDL2/include/SDL2
+g++ -c src/gameStateManager.cpp -o src/gameStateManager.o -std=c++20 -lmingw32  -lSDL2main -lSDL2 -lSDL2_ttf -lSDL2_image -lSDL2_mixer -Lsrc/SDL2/lib -Lsrc/SDL2/bin -Isrc/SDL2/include -Isrc/SDL2/include/SDL2
+g++ -c src/popup.cpp -o src/popup.o -std=c++20 -lmingw32  -lSDL2main -lSDL2 -lSDL2_ttf -lSDL2_image -lSDL2_mixer -Lsrc/SDL2/lib -Lsrc/SDL2/bin -Isrc/SDL2/include -Isrc/SDL2/include/SDL2
+g++ -c src/sound.cpp -o src/sound.o -std=c++20 -lmingw32  -lSDL2main -lSDL2 -lSDL2_ttf -lSDL2_image -lSDL2_mixer -Lsrc/SDL2/lib -Lsrc/SDL2/bin -Isrc/SDL2/include -Isrc/SDL2/include/SDL2
+g++ -c src/music.cpp -o src/music.o -std=c++20 -lmingw32  -lSDL2main -lSDL2 -lSDL2_ttf -lSDL2_image -lSDL2_mixer -Lsrc/SDL2/lib -Lsrc/SDL2/bin -Isrc/SDL2/include -Isrc/SDL2/include/SDL2
+g++ -o chess $(wildcard src/*.o) -std=c++20 -lmingw32  -lSDL2main -lSDL2 -lSDL2_ttf -lSDL2_image -lSDL2_mixer -Lsrc/SDL2/lib -Lsrc/SDL2/bin -Isrc/SDL2/include -Isrc/SDL2/include/SDL2
+./chess
+\end{lstlisting}
 
+\section{Architecture design}
+\includesvg[width = 500pt, height = 600pt, angle = 0]{altDecision.svg}
 
-
+\section{Processes}
+\subsection{Player's move}
+\includegraphics[width = \linewidth]{MOve diagram.png}
+\subsection{AI's move}
+\includegraphics[width = \linewidth]{AI move.png}
 
 \chapter{Implementation Details}
 \section{Organization}
