--- a/Report/ChessGameReport.tex
+++ b/Report/ChessGameReport.tex
@@ -98,7 +98,7 @@ breaklines=true
           \item Load button to load saved board states from storage.
           \item Quit button to exit the game.
         \end{itemize}
-  \item A In-game menu is rendered to the right and bottom portions of the board.
+  \item An in-game menu is rendered to the right and bottom portions of the board.
         \begin{itemize}
           \item Promotion menu is rendered to the top or bottom of pawn under promotion, with four options to promote to queen, bishop, kngiht or rook.
           \item Right menu bar
@@ -116,7 +116,7 @@ breaklines=true
         \end{itemize}
   \item A load menu displays buttons to load saved games, each of which shows previews of board when hovered and load the actual game when clicked.
   \item A save menu displays buttons to save current game. On hover, each button display preview of saved game that is going to be overwritten if current game is saved. When pressed, a confirmation menu appears to ask if user want to overwrite. There are also a clear button for each save file to delete that save.
-  \item A setting menu has buttons of theme switching, adjust volume of all sound effect, mute and unmute sound, reset the game to starting position, and quit to menu.
+  \item A setting menu has buttons of switching theme along with the theme's designated pieces set, adjust volume of all sound effect, mute and unmute sound, reset the game to starting position, and quit to menu.
 \end{itemize}
 \section{Chess board representation}
 \begin{itemize}
