Adjusted report file

--- a/Report/ChessGameReport.tex
+++ b/Report/ChessGameReport.tex
@@ -199,7 +199,7 @@ To compile the program from source files, the directory must first be at the sam
 
 Then, user can build the project by running \texttt{./buildscriptwindows.ps1} or run \texttt{make all}. After that, the executable is named \texttt{chess.exe}, which is located at \texttt{CS160\_Chess} folder. The executable will be automatically be ran after being built.
 
-An alternative way for building the project if the above methods doesn't work is to run \texttt{BuildScriptWindows.ps1} file in powershell. 
+An alternative way for building the project if the above methods doesn't work is to run \\ \texttt{BuildScriptWindows.ps1} file in powershell. 
 
 \section{Architecture design}
 \includesvg[width = 500pt, height = 600pt, angle = 0]{altDecision.svg}
