added screens in Report latex

--- a/Report/ChessGameReport.tex
+++ b/Report/ChessGameReport.tex
@@ -229,6 +229,40 @@ Keep action buttons (e.g., "Undo," "Redo") clearly labeled and easily accessible
 \subsection{Feedback and Interactivity}
 The game provides immediate visual feedback for actions, such as highlighting selectable pieces, legal moves and errors (e.g., illegal moves).
 
+\begin{figure*}
+  \begin{minipage}[t]{\columnwidth}% 1st minipage
+    \includegraphics[width=\linewidth]{start_screen.png}
+    \caption{Start screen\dots}
+    \label{fig:first}
+  \end{minipage}%
+  \hfill
+  \begin{minipage}[t]{\columnwidth}% 2nd minipage
+    \includegraphics[width=\linewidth]{game_screen.png}
+    \caption{Game screen\dots}
+    \label{fig:second}
+  \end{minipage}%
+  \hfill \break
+  
+  \begin{minipage}[t]{\columnwidth}% 3rd minipage
+    \includegraphics[width=\linewidth]{load_screen.png}
+    \caption{Load screen\dots}
+    \label{fig:third}
+  \end{minipage}%
+  \hfill
+  \begin{minipage}[t]{\columnwidth}% 4th minipage
+    \includegraphics[width=\linewidth]{game_screen.png}
+    \caption{Save screen\dots}
+    \label{fig:fourth}
+  \end{minipage}%
+  \hfill \break
+
+  \begin{minipage}[t]{\columnwidth}% 5th minipage
+    \includegraphics[width=\linewidth]{settings_screen.png}
+    \caption{Settings screen\dots}
+    \label{fig:fifth}
+  \end{minipage}%
+\end{figure*}
+
 Ensure smooth and unobtrusive transitions between different game states (e.g., Undo, Redo, Load).
 \chapter{Implementation Details}
 \section{Organization}
