Added work division

--- a/Report/ChessGameReport.tex
+++ b/Report/ChessGameReport.tex
@@ -38,7 +38,7 @@ breaklines=true
 % Use an asterisk (*) to identify the corresponding author, and be sure to include that person’s e-mail address. Use symbols (in this order: †, ‡, §, ||, ¶, #, ††, ‡‡, etc.) for author notes, such as present addresses, “These authors contributed equally to this work” notations, and similar information.
 \begin{otherlanguage}{vietnam}
 \author{Nguyễn Hoàng Thuận Phát, Huỳnh Tấn Phúc}    
-\date{Submission day: \selectlanguage{english}\today}
+\date{Last edited day: \selectlanguage{english}\today}
 \end{otherlanguage}
 %%%%%% Affiliations %%%%%%
 
