--- a/Report/ChessGameReport.tex
+++ b/Report/ChessGameReport.tex
@@ -230,39 +230,39 @@ The game implements an intuitive and minimal navigation bar with essential optio
 \subsection{Feedback and Interactivity}
 The game provides immediate visual feedback for actions, such as highlighting selectable pieces, legal moves and errors (e.g., illegal moves).
 
-\begin{figure*}
-  \begin{minipage}[t]{\columnwidth}% 1st minipage
+  \begin{figure*}% 1st figure*
     \includegraphics[width=\linewidth]{start_screen.png}
     \caption{Start screen\dots}
     \label{fig:first}
-  \end{minipage}%
+  \end{figure*}%
   \hfill
-  \begin{minipage}[t]{\columnwidth}% 2nd minipage
+
+  \begin{figure*}% 2nd figure*
     \includegraphics[width=\linewidth]{game_screen.png}
     \caption{Game screen\dots}
     \label{fig:second}
-  \end{minipage}%
+  \end{figure*}%
   \hfill \break
   
-  \begin{minipage}[t]{\columnwidth}% 3rd minipage
+  \begin{figure*}% 3rd figure*
     \includegraphics[width=\linewidth]{load_screen.png}
     \caption{Load screen\dots}
     \label{fig:third}
-  \end{minipage}%
+  \end{figure*}%
   \hfill
-  \begin{minipage}[t]{\columnwidth}% 4th minipage
+
+  \begin{figure*}% 4th figure*
     \includegraphics[width=\linewidth]{game_screen.png}
     \caption{Save screen\dots}
     \label{fig:fourth}
-  \end{minipage}%
+  \end{figure*}%
   \hfill \break
 
-  \begin{minipage}[t]{\columnwidth}% 5th minipage
+  \begin{figure*}% 5th figure*
     \includegraphics[width=\linewidth]{settings_screen.png}
     \caption{Settings screen\dots}
     \label{fig:fifth}
-  \end{minipage}%
-\end{figure*}
+  \end{figure*}%
 
 Ensure smooth and unobtrusive transitions between different game states (e.g., Undo, Redo, Load).
 \chapter{Implementation Details}
